--- a/Fisio+/base.css
+++ b/Fisio+/base.css
@@ -43,7 +43,7 @@ main {
     justify-content: center;
 }
 
-.Login {
+.acao {
     background-color: #ffffff;
     width: 360px;
     padding: 30px 25px;
@@ -51,13 +51,13 @@ main {
     border-top: 8px solid #1d4656;
 }
 
-.Login h2 {
+.acao h2 {
     text-align: center;
     color: #1d4656;
     margin-bottom: 10px;
 }
 
-.Login::before {
+.acao::before {
     content: "Seu bem-estar começa aqui!";
     display: block;
     text-align: center;
@@ -66,18 +66,18 @@ main {
     margin-bottom: 20px;
 }
 
-.Login form {
+.acao form {
     display: flex;
     flex-direction: column;
 }
 
-.Login label {
+.acao label {
     font-size: 13px;
     color: #333;
     margin-bottom: 4px;
 }
 
-.Login input {
+.acao input {
     padding: 10px;
     margin-bottom: 18px;
     border: none;
@@ -85,12 +85,12 @@ main {
     background-color: #f9f9f9;
 }
 
-.Login input:focus {
+.acao input:focus {
     outline: none;
     border-bottom-color: #1d4656;
 }
 
-.Login button {
+.acao button {
     padding: 12px;
     background-color: #1d4656;
     color: white;
@@ -100,11 +100,11 @@ main {
     cursor: pointer;
 }
 
-.Login button:hover {
+.acao button:hover {
     background-color: #31748f;
 }
 
-.cadastro-link {
+.opc-link {
     text-align: center;
     margin-top: 10px;
     color: #1d4656;
@@ -112,7 +112,7 @@ main {
     font-size: 14px;
 }
 
-.cadastro-link:hover {
+.opc-link:hover {
     text-decoration: underline;
     color: #31748f;
 }
